add page tank you

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Gilberto Lopes">
     <meta name="description" content="Developer Gilberto Portifólio">
     <meta name="keywords" content=" portfolio, gilberto lopes, developer, desenvolvedor, programmer">
-    <link rel="shortcut icon" href="icons-g/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
@@ -233,34 +233,8 @@
                         <!-- <iframe src="https://developer-gilberto.github.io/portifolio-gilberto/" frameborder="0"></iframe> -->
                         <img src="img/portifolio-gilberto.png" alt="Portifólio Gilberto">
                     </div>
-                    <a href="https://developer-gilberto.github.io/portifolio-gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="#home"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/portifolio-gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
-                </div>
-                <div class="card-projetos">
-                    <h3>Mascote do Android</h3>
-                    <div>
-                        <i class='bx orange5 bxl-html5'></i>
-                        <i class='bx blue3 bxl-css3' ></i>
-                    </div>
-                    <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/project-android/" frameborder="0"></iframe> -->
-                        <img src="img/mascote-android.png" alt="Projeto Mascote Android">
-                    </div>
-                    <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
-                    <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
-                </div>
-                <div class="card-projetos">
-                    <h3>Cordel moderno</h3>
-                    <div>
-                        <i class='bx orange5 bxl-html5'></i>
-                        <i class='bx blue3 bxl-css3' ></i>
-                    </div>
-                    <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/projeto-cordel/" frameborder="0"></iframe> -->
-                        <img src="img/cordel-moderno.png" alt="Projeto Cordel Moderno">
-                    </div>
-                    <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
-                    <a href="https://github.com/developer-gilberto/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
                 <div class="card-projetos">
                     <h3>Biomédica Dhara</h3>
@@ -277,7 +251,7 @@
                     <a href="https://github.com/developer-gilberto/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
                 <div class="card-projetos">
-                    <h3>Portifólio teste</h3>
+                    <h3>Portifólio</h3>
                     <div>
                         <i class='bx orange5 bxl-html5'></i>
                         <i class='bx blue3 bxl-css3' ></i>
@@ -288,6 +262,32 @@
                     </div>
                     <a href="https://developer-gilberto.github.io/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                </div>
+                <div class="card-projetos">
+                    <h3>Cordel moderno</h3>
+                    <div>
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                    </div>
+                    <div class="iphone">
+                        <!-- <iframe src="https://developer-gilberto.github.io/projeto-cordel/" frameborder="0"></iframe> -->
+                        <img src="img/cordel-moderno.png" alt="Projeto Cordel Moderno">
+                    </div>
+                    <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                </div>
+                <div class="card-projetos">
+                    <h3>Mascote do Android</h3>
+                    <div>
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                    </div>
+                    <div class="iphone">
+                        <!-- <iframe src="https://developer-gilberto.github.io/project-android/" frameborder="0"></iframe> -->
+                        <img src="img/mascote-android.png" alt="Projeto Mascote Android">
+                    </div>
+                    <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
             </div>
         </section>
@@ -314,6 +314,7 @@
                         </label>
                         <textarea id="textarea" name="textarea" cols="30" rows="5" spellcheck="false" autocomplete="off" placeholder="Mensagem..."></textarea>
                     </div>
+                    <input type="hidden" name="_next" value="https://developer-gilberto.github.io/portifolio-gilberto/obrigado.html">
                     <input class="btn-form" type="submit" value="Enviar">
                     <input class="btn-form" type="reset" value="Limpar">
            </form>
@@ -340,7 +341,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/scripts.js"></script>
+    <script src="javascript/scripts.js"></script>
 
 </body>
 </html>
