add slide for section project

--- a/index.html
+++ b/index.html
@@ -219,9 +219,15 @@
 
         <!-- SECTION PROJETOS -->
         <section id="projetos">
+            <i class='bx bxs-left-arrow-circle'></i>
+            <i class='bx bxs-right-arrow-circle'></i>
             <h2>PROJETOS</h2>
             <p>Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analizar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
             <div class="container-projetos">
+                <div class="projeto-vazio">
+                    <p>Ops! Não tem mais nada por aqui.</p>
+                    <p>Por favor volte =></p>
+                </div>
                 <div class="card-projetos">
                     <h3>Portifólio Gilberto</h3>
                     <div>
@@ -288,6 +294,10 @@
                     </div>
                     <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                </div>
+                <div class="projeto-vazio">
+                    <p>Ops! Não tem mais nada por aqui.</p>
+                    <p>&lt;= Por favor volte.</p>
                 </div>
             </div>
         </section>
