hotfix slide section project, add btn whattsapp

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                             <a href="https://www.instagram.com/developer.gilberto/" target="_blank" rel="noopener noreferrer">
                                 <i class='bx bxl-instagram' ></i>
                             </a>
+                            <a href="https://wa.me/5573981051085">
+                                <i id="icon-whattsapp" class='bx bxl-whatsapp'></i>
+                            </a>
                             <a id="linkedin" href="#">
                                 <i class='bx bxl-linkedin-square' ></i>
                             </a>
@@ -175,7 +178,7 @@
                         Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, onde posso contribuir com minhas ideias, validar meus conhecimentos e também aprender com outros desenvolvedores.
                     </p><br>
                     <p>
-                        💬 "Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é programação</strong>."
+                        💬 <em>"Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é programação</strong>."</em>
                     </p>
                 </div>
                 <div class="container-img-sobremim">
