add atributte _blank noreferrer in link whattsapp

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <a href="https://www.instagram.com/developer.gilberto/" target="_blank" rel="noopener noreferrer">
                                 <i class='bx bxl-instagram' ></i>
                             </a>
-                            <a href="https://wa.me/5573981051085">
+                            <a href="https://wa.me/5573981051085" target="_blank" rel="noopener noreferrer">
                                 <i id="icon-whattsapp" class='bx bxl-whatsapp'></i>
                             </a>
                             <a id="linkedin" href="#">
