add opcao usuario ser chamado pelo nome

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                         </div>
                     </li>
                     <li>
+                        <button class="btn-como-quer-ser-chamado">Como deseja ser chamado?</button>
+                    </li>
+                    <li>
                         <button id="btn-tema">
                             <label for="btn-tema">
                                 <div id="ball" class="ball"></div>
@@ -143,7 +146,7 @@
         <!-- SECTION HOME -->
         <section id="home">
             <p class="boas-vindas">
-                Olá! Estou feliz que você tenha reservado um tempinho para visitar meu site. Seja muito bem vindo(a). Espero que goste.
+                Olá! Estou feliz que você tenha reservado um tempinho para visitar meu site. Seja muito bem vindo(a)! Espero que goste.
             </p>
             <p class="eu-sou">Eu sou</p>
             <h1 class="gilberto-lopes">Gilberto Lopes</h1>
@@ -172,13 +175,14 @@
                         <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.</p>
                     </div><br>
                     <p>
-                        Atualmente, estou me dedicando a estudar programação por conta própria, utilizando recursos da internet como cursos, documentações e tutoriais. Futuramente quando estiver trabalhando como programador pretendo fazer curso superior e inglês para obter ainda mais conhecimento.
+                        Atualmente, estou me dedicando a estudar programação por conta própria, utilizando recursos da internet como cursos, documentações e tutoriais. Futuramente, quando estiver trabalhando como programador, pretendo fazer curso superior e inglês para obter mais conhecimento.
                     </p>
                     <p>
-                        Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, onde posso contribuir com minhas ideias, validar meus conhecimentos e também aprender com outros desenvolvedores.
+                        Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, contribuindo com minhas ideias, validando meus conhecimentos e também aprender com outros desenvolvedores.
                     </p><br>
                     <p>
-                        💬 <em>"Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é programação</strong>."</em>
+                        <blockquote>💬"Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! <strong>Isso é programação</strong>."</blockquote>
+                        <cite>Lopes, Gilberto 2023</cite>
                     </p>
                 </div>
                 <div class="container-img-sobremim">
@@ -203,7 +207,7 @@
                     </div>
                 </div>
                 <div class="container-soft-skills">
-                    <h3>🌱 Soft Skills</h3>
+                    <h3>🤝 Soft Skills</h3>
                     <div>
                         <ul>
                             <li>Facilidade de comunicação</li>
@@ -225,7 +229,7 @@
             <i class='bx bxs-left-arrow-circle'></i>
             <i class='bx bxs-right-arrow-circle'></i>
             <h2>PROJETOS</h2>
-            <p>Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analizar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
+            <p>Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
             <div class="container-projetos">
                 <div class="projeto-vazio">
                     <p>Ops! Não tem mais nada por aqui.</p>
