add mensagens personalizadas para o usuario

--- a/index.html
+++ b/index.html
@@ -36,31 +36,26 @@
             <ul>
                 <li>
                     <a href="#home" class="itens-menu-desktop">
-                        <span class="material-symbols-outlined">home</span>
                         HOME
                     </a>
                 </li>
                 <li>
                     <a href="#sobre-mim" class="itens-menu-desktop">
-                        <span class="material-symbols-outlined">person</span>
                         SOBRE MIM
                     </a>
                 </li>
                 <li>
                     <a href="#skills" class="itens-menu-desktop">
-                        <span class="material-symbols-outlined">code</span>
                         SKILLS
                     </a>
                 </li>
                 <li>
                     <a href="#projetos" class="itens-menu-desktop">
-                        <span class="material-symbols-outlined">architecture</span>
                         PROJETOS
                     </a>
                 </li>
                 <li>
                     <a href="#contato" class="itens-menu-desktop">
-                        <span class="material-symbols-outlined">mail</span>
                         CONTATO
                     </a>
                 </li>
@@ -146,7 +141,7 @@
         <!-- SECTION HOME -->
         <section id="home">
             <p class="boas-vindas">
-                Olá! Estou feliz que você tenha reservado um tempinho para visitar meu site. Seja muito bem vindo(a)! Espero que goste.
+                Estou feliz que você tenha reservado um tempinho para visitar meu site. Seja muito bem vindo(a)! Espero que goste.
             </p>
             <p class="eu-sou">Eu sou</p>
             <h1 class="gilberto-lopes">Gilberto Lopes</h1>
@@ -169,7 +164,7 @@
             <h2>SOBRE MIM</h2>
             <div class="container-sobre">
                 <div class="container-texto-sobremim">
-                    <h3>👋 Olá, meu nome é Gilberto Lopes</h3>
+                    <h3 class="ola-fulano">👋 Olá, meu nome é Gilberto Lopes</h3>
                     <div class="container-img-developer">
                         <img class="img-dev-sobremim" src="img/dev.png" alt="Developer">
                         <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.</p>
@@ -226,15 +221,9 @@
 
         <!-- SECTION PROJETOS -->
         <section id="projetos">
-            <i class='bx bxs-left-arrow-circle'></i>
-            <i class='bx bxs-right-arrow-circle'></i>
             <h2>PROJETOS</h2>
-            <p>Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
+            <p class="entao">Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
             <div class="container-projetos">
-                <div class="projeto-vazio">
-                    <p>Ops! Não tem mais nada por aqui.</p>
-                    <p>Por favor volte =></p>
-                </div>
                 <div class="card-projetos">
                     <h3>Portifólio Gilberto</h3>
                     <div>
@@ -243,7 +232,6 @@
                         <i class='bx bxl-javascript'></i>
                     </div>
                     <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/portifolio-gilberto/" frameborder="0"></iframe> -->
                         <img src="img/portifolio-gilberto.png" alt="Portifólio Gilberto">
                     </div>
                     <a href="#home"><i class='bx bx-link-external'></i>Visitar projeto</a>
@@ -257,7 +245,6 @@
                         <i class='bx bxl-javascript'></i>
                     </div>
                     <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/projeto-cordel/" frameborder="0"></iframe> -->
                         <img src="img/biomedica-dhara.png" alt="Projeto Biomédica">
                     </div>
                     <a href="https://developer-gilberto.github.io/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
@@ -270,7 +257,6 @@
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
                     <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/portfolio/" frameborder="0"></iframe> -->
                         <img src="img/portifolio-teste.png" alt="Projeto Portifólio teste">
                     </div>
                     <a href="https://developer-gilberto.github.io/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
@@ -283,7 +269,6 @@
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
                     <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/projeto-cordel/" frameborder="0"></iframe> -->
                         <img src="img/cordel-moderno.png" alt="Projeto Cordel Moderno">
                     </div>
                     <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
@@ -296,21 +281,17 @@
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
                     <div class="iphone">
-                        <!-- <iframe src="https://developer-gilberto.github.io/project-android/" frameborder="0"></iframe> -->
                         <img src="img/mascote-android.png" alt="Projeto Mascote Android">
                     </div>
                     <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
-                </div>
-                <div class="projeto-vazio">
-                    <p>Ops! Não tem mais nada por aqui.</p>
-                    <p>&lt;= Por favor volte.</p>
                 </div>
             </div>
         </section>
 
         <!-- SECTION CONTATO -->
         <section id="contato">
+            <p class="contato-user"></p>
             <form action="https://formsubmit.co/developer.gilberto@gmail.com" method="POST">
                 <h2>CONTATO PROFISSIONAL</h2>
                     <div class="container-label">
