hotfix resolved bugs buttons in firefox

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         </nav>
 
         <!-- BUTTON MENU MOBILE-->
-        <button id="btn-burguer">
+        <div id="btn-burguer">
             <label for="btn-burguer">
                 <span class="span-1"></span>
                 <span class="span-2"></span>
                 <span class="span-3"></span>
             </label>
-        </button>
+        </div>
 
         <!-- MENU MOBILE-->
         <menu class="menu">
@@ -107,13 +107,13 @@
                         <button class="btn-como-quer-ser-chamado">Como deseja ser chamado?</button>
                     </li>
                     <li>
-                        <button id="btn-tema">
+                        <div id="btn-tema">
                             <label for="btn-tema">
                                 <div id="ball" class="ball"></div>
                                 <span id="sun" class="material-symbols-outlined">light_mode</span>
                                 <span id="moon" class="material-symbols-outlined">mode_night</span>
                             </label>
-                        </button>
+                        </div>
                     </li>
                     <li>
                         <a href="#home" class="itens-menu-mobile">HOME</a>
@@ -232,7 +232,7 @@
                         <i class='bx bxl-javascript'></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/portifolio-gilberto.png" alt="Portifólio Gilberto">
+                        <img src="img/portifolio-gilberto2.png" alt="Portifólio Gilberto">
                     </div>
                     <a href="#home"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/portifolio-gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
@@ -245,7 +245,7 @@
                         <i class='bx bxl-javascript'></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/biomedica-dhara.png" alt="Projeto Biomédica">
+                        <img src="img/biomedica-dhara2.png" alt="Projeto Biomédica">
                     </div>
                     <a href="https://developer-gilberto.github.io/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
@@ -257,7 +257,7 @@
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/portifolio-teste.png" alt="Projeto Portifólio teste">
+                        <img src="img/portifolio-teste2.png" alt="Projeto Portifólio teste">
                     </div>
                     <a href="https://developer-gilberto.github.io/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/portfolio/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
@@ -269,7 +269,7 @@
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/cordel-moderno.png" alt="Projeto Cordel Moderno">
+                        <img src="img/cordel-moderno2.png" alt="Projeto Cordel Moderno">
                     </div>
                     <a href="https://developer-gilberto.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/projeto-cordel/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
@@ -281,7 +281,7 @@
                         <i class='bx blue3 bxl-css3' ></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/mascote-android.png" alt="Projeto Mascote Android">
+                        <img src="img/mascote-android2.png" alt="Projeto Mascote Android">
                     </div>
                     <a href="https://developer-gilberto.github.io/project-android/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/project-android" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
