add project calculator

--- a/index.html
+++ b/index.html
@@ -225,6 +225,21 @@
             <p class="entao">Aqui você encontra alguns dos projetos que fiz com o objetivo de praticar os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: Todos os projetos são responsivos.</p>
             <div class="container-projetos">
                 <div class="card-projetos">
+                    <h3>Calculadora</h3>
+                    <div>
+                        <i class='bx orange5 bxl-html5'></i>
+                        <i class='bx blue3 bxl-css3' ></i>
+                        <i class='bx bxl-javascript'></i>
+                    </div>
+                    <div class="iphone">
+                        <img src="img/calculadora_JS.png" alt="calculadora">
+                    </div>
+                    <a href="https://developer-gilberto.github.io/calculadora-javascript/" target="_blank" rel="noopener noreferrer">
+                        <i class='bx bx-link-external'></i>Visitar projeto
+                    </a>
+                    <a href="https://github.com/developer-gilberto/calculadora-javascript" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                </div>
+                <div class="card-projetos">
                     <h3>Portifólio Gilberto</h3>
                     <div>
                         <i class='bx orange5 bxl-html5'></i>
