removed btn whattsapp & add attribute defer in js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/mobile.css" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script defer src="javascript/scripts.js"></script>
     <title>Gilberto_Lopes</title>
 </head>
 <body>
@@ -91,9 +92,6 @@
                             </a>
                             <a href="https://www.instagram.com/developer.gilberto/" target="_blank" rel="noopener noreferrer">
                                 <i class='bx bxl-instagram' ></i>
-                            </a>
-                            <a href="https://wa.me/5573981051085" target="_blank" rel="noopener noreferrer">
-                                <i id="icon-whattsapp" class='bx bxl-whatsapp'></i>
                             </a>
                             <a id="linkedin" href="#">
                                 <i class='bx bxl-linkedin-square' ></i>
@@ -352,9 +350,6 @@
         <!-- BOTÃO IR PARA TOPO -->
         <a href="#home"><i id="btn-topo" class='bx bxs-up-arrow-square'></i></a>
     </footer>
-
-    <!-- JavaScript -->
-    <script src="javascript/scripts.js"></script>
 
 </body>
 </html>
