att dharabiomedica project link

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <i class='bx bxl-javascript'></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/portifolio-gilberto2.png" alt="Portifólio Gilberto">
+                        <img src="img/portfolio_gilberto.png" alt="Portifólio Gilberto">
                     </div>
                     <a href="#home"><i class='bx bx-link-external'></i>Visitar projeto</a>
                     <a href="https://github.com/developer-gilberto/portifolio-gilberto/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
@@ -258,10 +258,10 @@
                         <i class='bx bxl-javascript'></i>
                     </div>
                     <div class="iphone">
-                        <img src="img/biomedica-dhara2.png" alt="Projeto Biomédica">
+                        <img src="img/biomedica_dhara.png" alt="Projeto Biomédica">
                     </div>
-                    <a href="https://developer-gilberto.github.io/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
-                    <a href="https://github.com/developer-gilberto/dhara-leite-lopes/" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
+                    <a href="https://developer-gilberto.github.io/dharabiomedica/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i>Visitar projeto</a>
+                    <a href="https://github.com/developer-gilberto/dharabiomedica" target="_blank" rel="noopener noreferrer"><i class='bx bx-code-alt' ></i>Código fonte</a>
                 </div>
                 <div class="card-projetos">
                     <h3>Portifólio</h3>
