--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gilberto Lopes">
-    <meta name="description" content="Developer Gilberto Portifólio">
-    <meta name="keywords" content=" portfolio, gilberto lopes, developer, desenvolvedor, programmer">
+    <meta name="description" content="Portifólio Gilberto Lopes Developer">
+    <meta name="keywords" content=" portfólio, portfolio, gilberto lopes, developer, desenvolvedor, programmer">
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script defer src="javascript/scripts.js"></script>
-    <title>Gilberto_Lopes</title>
+    <title>Gilberto Lopes</title>
 </head>
 <body>
 
@@ -36,29 +36,19 @@
         <nav class="nav-desktop">
             <ul>
                 <li>
-                    <a href="#home" class="itens-menu-desktop">
-                        HOME
-                    </a>
+                    <a href="#home" class="itens-menu-desktop">HOME</a>
                 </li>
                 <li>
-                    <a href="#sobre-mim" class="itens-menu-desktop">
-                        SOBRE MIM
-                    </a>
+                    <a href="#sobre-mim" class="itens-menu-desktop">SOBRE MIM</a>
                 </li>
                 <li>
-                    <a href="#skills" class="itens-menu-desktop">
-                        SKILLS
-                    </a>
+                    <a href="#skills" class="itens-menu-desktop">SKILLS</a>
                 </li>
                 <li>
-                    <a href="#projetos" class="itens-menu-desktop">
-                        PROJETOS
-                    </a>
+                    <a href="#projetos" class="itens-menu-desktop">PROJETOS</a>
                 </li>
                 <li>
-                    <a href="#contato" class="itens-menu-desktop">
-                        CONTATO
-                    </a>
+                    <a href="#contato" class="itens-menu-desktop">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -105,13 +95,12 @@
                         <button class="btn-como-quer-ser-chamado">Como deseja ser chamado?</button>
                     </li>
                     <li>
-                        <div id="btn-tema">
-                            <label for="btn-tema">
-                                <div id="ball" class="ball"></div>
-                                <span id="sun" class="material-symbols-outlined">light_mode</span>
-                                <span id="moon" class="material-symbols-outlined">mode_night</span>
-                            </label>
-                        </div>
+                        <input type="checkbox" id="checkbox_mode_dark_light">
+                        <label class="label_mode_dark_light" for="checkbox_mode_dark_light">
+                            <div id="ball" class="ball"></div>
+                            <span id="moon" class="material-symbols-outlined">mode_night</span>
+                            <span id="sun" class="material-symbols-outlined">light_mode</span>
+                        </label>
                     </li>
                     <li>
                         <a href="#home" class="itens-menu-mobile">HOME</a>
@@ -138,6 +127,9 @@
 
         <!-- SECTION HOME -->
         <section id="home">
+            <code>
+                console.<span class="log">log</span><span class="parenteses">(</span><span class="hello_world"><span class="aspas">"</span>Hello World!<span class="aspas">"</span></span><span class="parenteses">)</span>;
+            </code>
             <p class="boas-vindas">
                 Estou feliz que você tenha reservado um tempinho para visitar meu site. Seja muito bem vindo(a)! Espero que goste.
             </p>
